--- a/notebook/config/waybar/config
+++ b/notebook/config/waybar/config
@@ -1,59 +1,76 @@
 {
-    "height": 20,
-    "spacing": 0,
-    "position": "bottom",
-    "modules-left": [
-        "river/window",
-        "tray"
-    ],
-    "modules-center": [
-        "river/tags",
-    ],
-    "modules-right": [
-        "network",
-        "pulseaudio",
-        "battery",
-        "clock",
-        "custom/notification"
-    ],
+    "layer": "bottom", // Waybar at top layer
+    "position": "bottom", // Waybar position (top|bottom|left|right)
+    // "height": 25, // Waybar height (to be removed for auto height)
+    // Archived modules
+    // "custom/gpu", "bluetooth",  "custom/weather", "temperature", "sway/window"
+    // Choose the order of the modules
+    "modules-left": ["river/tags" ],
+    "modules-center": ["clock" ],
+    "modules-right": [ "pulseaudio", "bluetooth", "cpu", "memory", "battery", "network", "tray", "custom/notification", "custom/power" ],
+    // Modules configuration
+    "bluetooth": {
+        "interval": 30,
+        "format": "{icon}",
+        // "format-alt": "{status}",
+        "format-icons": {
+            "enabled": "",
+            "disabled": ""
+        },
+        "on-click": "blueberry"
+    },
+    "idle_inhibitor": {
+        "format": "{icon}",
+        "format-icons": {
+            "activated": "",
+            "deactivated": ""
+        },
+        "tooltip": "true"
+    },
     "tray": {
-        "spacing": 10
+        //"icon-size": 11,
+        "spacing": 5
     },
     "clock": {
+        "format": "  {:%H:%M   %e %b}",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-        "format": "   {:%H:%M %a, %d/%b}",
+        "today-format": "<b>{}</b>",
+        "on-click": "gnome-calendar"
     },
-    "battery": {
-        "states": {
-            "warning": 30,
-            "critical": 15
-        },
-        "format": "{icon} {capacity}%",
-        "format-charging": "  {capacity}%",
-        "format-plugged": "  {capacity}%",
-        "format-icons": [
-            "  ",
-            "  ",
-            "  ",
-            "  ",
-            "  "
-        ],
-        "on-click": "ags -t quicksettings"
+    "network": {
+        // "interface": "wlan0", // (Optional) To force the use of this interface,
+        "format-wifi": "  {essid}",
+        "format-ethernet": "{ifname}: {ipaddr}/{cidr} ",
+        "format-linked": "{ifname} (No IP) ",
+        "format-disconnected": "",
+        "format-alt": "{ifname}: {ipaddr}/{cidr}",
+        "family": "ipv4",
+        "tooltip-format-wifi": "  {ifname} @ {essid}\nIP: {ipaddr}\nStrength: {signalStrength}%\nFreq: {frequency}MHz\n {bandwidthUpBits}  {bandwidthDownBits}",
+        "tooltip-format-ethernet": " {ifname}\nIP: {ipaddr}\n {bandwidthUpBits}  {bandwidthDownBits}"
     },
     "pulseaudio": {
-        "format": "{icon} {volume}%",
-        "format-bluetooth": " {icon} {volume}%",
-        "format-bluetooth-muted": "󰖁  {icon}",
-        "format-muted": "󰖁  {format_source}",
+        "scroll-step": 3, // %, can be a float
+        "format": "{icon} {volume}% {format_source}",
+        "format-bluetooth": "{volume}% {icon} {format_source}",
+        "format-bluetooth-muted": " {icon} {format_source}",
+        "format-muted": " {format_source}",
+        //"format-source": "{volume}% ",
+        //"format-source-muted": "",
+        "format-source": "",
+        "format-source-muted": "",
         "format-icons": {
-            "default": [
-                "",
-                " ",
-                "  "
-            ]
+            "headphone": "",
+            "hands-free": "",
+            "headset": "",
+            "phone": "",
+            "portable": "",
+            "car": "",
+            "default": ["", "", ""]
         },
-        "on-click": "pavucontrol"
+        "on-click": "pavucontrol",
+        "on-click-right": "pactl set-source-mute @DEFAULT_SOURCE@ toggle"
     },
+
   "custom/notification": {
     "tooltip": false,
     "format": "{icon}",
@@ -74,16 +91,18 @@
     "on-click-right": "swaync-client -d -sw",
     "escape": true
   },
-    "network": {
-        "format-wifi": "   {essid} ({signalStrength}%)",
-        "format-ethernet": "⬇ {bandwidthDownBytes} ⬆ {bandwidthUpBytes}",
-        "interval": 3,
-        "format-disconnected": "󰖪 ",
-        "format-alt": "{ifname}: {ipaddr}/{cidr}",
-        "on-click": "nm-applet",
-        "tooltip-format": "  {bandwidthUpBits}   {bandwidthDownBits}\n{ifname}\n{ipaddr}/{cidr}\n",
-        "tooltip-format-wifi": "  {essid} {frequency}MHz\nStrength: {signaldBm}dBm ({signalStrength}%)\nIP: {ipaddr}/{cidr}\n  {bandwidthUpBits}   {bandwidthDownBits}",
-        "min-length": 17,
-        "max-length": 17
-    }
+  "cpu": {
+    "interval": 1,
+    "format": "  {icon0}{icon1}{icon2}{icon3} {usage:>2}%",
+    "format-icons": ["▁", "▂", "▃", "▄", "▅", "▆", "▇", "█"]
+  },
+  "memory": {
+    "interval": 30,
+    "format": "  {used:0.1f}G/{total:0.1f}G"
+  },
+  "custom/power": {
+    "tooltip": false,
+    "on-click": "wlogout &",
+    "format": "⏻"
+  },
 }
